observability/base/kube-prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: platform-public # should be exposed using a private gateway for prod
      namespace: infrastructure
  hostnames:
    - "grafana.${domain_name}"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
